# erax

./: .gitignore  ARCHITECTURE.md  Cargo.toml  KEYBINDINGS.md  Makefile  README.md  ROADMAP.md  shell.nix
data/: eowl_words.txt  software_terms.txt
demos/: UTF-8-demo-lig.txt
docs/: GUI_API_RESEARCH.md  implementation_plan.md.resolved
src/: cli.rs  config.rs  lib.rs  main.rs  user_config.rs
src/core/: app.rs  buffer.rs  calculator.rs  command.rs  completion.rs  diagnostics.rs  dispatcher.rs  focus.rs  geometry.rs  id.rs  input.rs  input_router.rs  kill_ring.rs  layout.rs  lexer.rs  menu.rs  mod.rs  mouse.rs  print.rs  prompt.rs  selection.rs  snippets.rs  spell.rs  syntax.rs  terminal_host.rs  undo_group.rs  utf8.rs  window.rs
src/core/commands/: buffer.rs  calculator.rs  completion.rs  control.rs  diagnostics.rs  diff.rs  editing.rs  expand_selection.rs  file.rs  kill_ring.rs  macro_cmd.rs  marks.rs  mod.rs  movement.rs  print.rs  search.rs  snippets.rs  spell_suggest.rs  terminal.rs  text.rs  undo.rs  window.rs
src/gui/: atlas.rs  font_loader.rs  font_manager.rs  grid_renderer.rs  grid_shader.wgsl  input.rs  mod.rs  quad_renderer.rs  renderer.rs
src/gui/shaders/: background.wgsl  glyph.wgsl
src/run/: gui.rs  mod.rs  sed.rs  tui.rs
src/sed/: diff.rs  mod.rs
src/terminal/: capabilities.rs  color.rs  display.rs  event_handler.rs  events.rs  gpm.rs  input_state.rs  keybinds.rs  mod.rs  prompt.rs  raw.rs  render.rs  scrollbar.rs  theme.rs
src/terminal/renderers/: dirty_tracker.rs  menu_renderer.rs  mod.rs  (+2 more)
tests/: foundation_stress.rs  selection_repro.rs
